Prevented image stretching

--- a/src/components/ChatApp/ChatApp.css
+++ b/src/components/ChatApp/ChatApp.css
@@ -674,8 +674,9 @@ textarea {
 }
 
 .card-img{
-  max-width: 100%;
   height: 120px;
+  object-fit: contain;
+  vertical-align: middle;
 }
 
 .card-text{
